# nbt

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  conandata.yml  sonar-project.properties  vcpkg.json
.github/workflows/: build.yml  release.yml
include/: nbt.h  region.h
src/: CMakeLists.txt  common.h  compound.cpp  compound.hpp  end.hpp  endian.h  endian_gnu.h  endian_win.h  field.cpp  field.hpp  helpers.hpp  list.hpp  main.cpp  nbt.cpp  nbt.h  nbt.hpp  nbt_error.hpp  region.cpp  serialisation_stream.h  tagtype.hpp
tests/: test_endian.cpp  test_gzip.cpp  test_io.cpp  test_list.cpp  test_primitives.cpp  test_region.cpp  unit_tests.cpp
